--- a/config/config.yml
+++ b/config/config.yml
@@ -3,3 +3,6 @@ openai_api_key: "sk-proj-zi9-fEUPKPG4XnpdcZspQ4aGHqLJdxKvY6LExaN3kKU5w2G34kOvWVA
 use_chatgpt_api: true
 chatgpt_model: "gpt-4"
 enable_message_streaming: false
+allowed_telegram_usernames:
+  - NikitaEgozha
+  - Fit_curly
