--- a/config/config.yml
+++ b/config/config.yml
@@ -8,3 +8,9 @@ allowed_telegram_usernames:
 new_dialog_timeout: 600
 use_mongo: true
 mongodb_uri: "mongodb+srv://negozha:vl3QKOOjhGNcYrU7@cluster0.8tltm2s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+chat_modes:
+  assistant:
+    name: 🤖 Assistant
+    welcome_message: "Hi! I'm your assistant!"
+    prompt_start: "You are a helpful assistant."
+    parse_mode: html
